# Kurs-Programowania

./: .gitignore  README.md
Codes/: FXThreadInterrupt.java  Interrupt.java  Interrupt1.java  JoinTest.java  PCFixed.java  Priority1.java  RunnableDemo.java  RunnableDemo1.java  RunnableDemo2.java  Synch1.java  Synch2.java  Synch3.java  Synch4.java  Synch5.java  Synch6.java
Lista0/: Program.java  dzielnik.java
Lista1/: LiczbyPierwsze.java  Test.java
Lista1/zad2/: LiczbyPierwsze.cpp  LiczbyPierwsze.hpp  Test.cpp
Lista2/: Test.java  WierszTrojkataPascala.java
Lista2/zad2/: Test.cpp
Lista3/: wsp.code-workspace
Lista3/zad1/: Czworakat.java  Figura.java  Figury.java  Kolo.java  Pieciakat.java  Szesciakat.java
Lista3/zad2/: CMakeLists.txt  Czworokat.hpp  Czworokaty.cpp  Czworokaty.hpp  Figura.hpp  Kolo.cpp  Kolo.hpp  Makefile  Pieciakat.cpp  Pieciakat.hpp  Szesciakat.cpp  Szesciakat.hpp  main.cpp
Lista3/zad2/test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
Lista3/zad3/: Figury.java  Test.java
Lista5/zad1/: domek.txt  shape
Lista6/KolorowaPlanszaDawidDębkowski/: CellClickHandler.java  IActiveListener.java  kompilacja.txt
Lista6/lib/: analiser.py  in.txt
Lista6/src/: App.java  CellClickHandler.java  CellRunnable.java  CellThread.java  Generator.java  GridCell.java  IActiveListener.java  MGridPane.java
Lista6/tests/: App copy.java  App.java  (+3 more)
Lista7/: Makefile
RSA-Algebra/: chatgpt.py  main.cpp
Wyklady/: Temperatura.java  TemperaturaTest.java  inheritance.java
(+98 files in other folders)
